# aoc2020-rs

./: Cargo.toml  LICENSE  README.md
day1/: Cargo.toml
day1/src/: lib.rs  main.rs
day10/: Cargo.toml
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: grid.rs  lib.rs  main.rs  parse.rs
day12/: Cargo.toml
day12/src/: lib.rs  logic_old.rs  logic_real.rs  main.rs  structs.rs
day13/: Cargo.toml
day13/src/: lib.rs  main.rs
day14/: Cargo.toml
day14/src/: definitions.rs  lib.rs  main.rs  parse.rs
day15/: Cargo.toml
day15/src/: lib.rs  main.rs
day16/: Cargo.toml
day16/src/: input  lib.rs  main.rs  structs.rs
day17/: Cargo.toml
day17/src/: cell.rs  lib.rs  main.rs  parse_3d.rs  parse_4d.rs  simulation_3d.rs  simulation_4d.rs
day18/: Cargo.toml
day18/src/: calculator.rs  lib.rs  main.rs  parser.pest  parser.rs
day2/: Cargo.toml
day2/src/: lib.rs  main.rs  parser.rs  validator.rs
day3/: Cargo.toml
day3/src/: lib.rs  main.rs
day4/: Cargo.toml
day4/src/: lib.rs  main.rs
day5/: Cargo.toml
day5/src/: lib.rs  main.rs
day6/: Cargo.toml
day6/src/: lib.rs  main.rs
day7/: Cargo.toml
day7/src/: lib.rs  main.rs  parser.rs
day8/: Cargo.toml
day8/src/: assembly.rs  lib.rs  main.rs  op.rs  parser.rs  permute.rs
day9/: Cargo.toml
day9/src/: lib.rs  main.rs  xmas.rs
get-input/: Cargo.toml
get-input/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
