[package]
name = "main"
version = "0.1.0"
authors = ["Florian Rohm <rohm.florian@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day1 = { path = "../day1" }
day2 = { path = "../day2" }
day3 = { path = "../day3" }
day4 = { path = "../day4" }
day5 = { path = "../day5" }
day6 = { path = "../day6" }
day7 = { path = "../day7" }
day8 = { path = "../day8" }
day9 = { path = "../day9" }
day10 = { path = "../day10" }
day11 = { path = "../day11" }
day12 = { path = "../day12" }
day13 = { path = "../day13" }
day14 = { path = "../day14" }
day15 = { path = "../day15" }
day16 = { path = "../day16" }
day17 = { path = "../day17" }
day18 = { path = "../day18" }
